@@ -1,7 +1,7 @@
 #
 # Makefile for a Video Disk Recorder plugin
 #
-# $Id: Makefile,v 1.11 2005/01/10 16:10:39 austriancoder Exp $
+# $Id: Makefile,v 1.1.2.1 2005/03/14 11:16:41 scop Exp $
 
 # The official name of this plugin.
 # This name will be used in the '-P...' option of VDR to load the plugin.
@@ -20,11 +20,18 @@ CXXFLAGS = -O2 -Wall -Woverloaded-virtual
 
 ### The directory environment:
 
-DVBDIR = ../../../DVB
-VDRDIR = ../../..
-LIBDIR = ../../lib
+##DVBDIR = ../../../../DVB
+##VDRDIR = ../../..
+##LIBDIR = ../../lib
+##TMPDIR = /tmp
+##FFMDIR = ../../../../ffmpeg
+### LIBMP3DIR = /usr/lib
+
+DVBDIR = /usr/src/linux
+VDRDIR = /usr/include/vdr
+LIBDIR = /usr/lib
 TMPDIR = /tmp
-FFMDIR = /usr/local/include/ffmpeg
+FFMDIR = /usr/include/ffmpeg
 EM8300 = /usr/include
 
 ### Allow user defined options to overwrite defaults:
@@ -48,19 +55,13 @@ DEFINES += -DPLUGIN_NAME_I18N='"$(PLUGIN)"'
 DEFINES += -DSOCKET_CHMOD=0660
 DEFINES += -D_GNU_SOURCE
 
-# where is the microcode for the dxr3 located?
-DEFINES += -DMICROCODE=\"/usr/share/misc/em8300.uc\"
-
-# where should we write our log?
-DEFINES += -DLOGPATH=\"/video/\"	# note: path must end with /
-
 ### The object files (add further files here):
 
 OBJS = $(PLUGIN).o dxr3multichannelaudio.o dxr3sysclock.o dxr3colormanager.o dxr3syncbuffer.o dxr3audiodecoder.o \
 dxr3blackframe.o dxr3palettemanager.o dxr3nextpts.o dxr3pesframe.o dxr3demuxdevice.o dxr3configdata.o \
-dxr3log.o dxr3ffmpeg.o dxr3spuencoder.o dxr3i18n.o \
+dxr3log.o dxr3ffmpeg.o dxr3interface_spu_encoder.o dxr3i18n.o \
 dxr3interface.o dxr3device.o dxr3outputthread.o dxr3osd.o dxr3osd_subpicture.o dxr3spudecoder.o dxr3unixserversocket.o \
-dxr3cpu.o dxr3memcpy.o dxr3dolbydigital.o
+dxr3cpu.o dxr3memcpy.o
 
 ### Implicit rules:
 
